	PR c++/42555 	* pt.c (tsubst_decl): Don't apply type attributes in place.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@155628 138bc75d-0d04-0410-961f-82ee72b054a4